# binghamton

./: CMakeLists.txt  README.md
include/binghamton/: binghamton.hpp
include/binghamton/core/: lsb.hpp  stc.hpp  ycbcr.hpp
include/binghamton/method/: wow.hpp
source/core/: lsb.cpp  stc.cpp  ycbcr.cpp
source/method/: wow.cpp
test/: gtest_env.cpp  gtest_env.hpp  gtest_wow.cpp
